Changed home controller

--- a/SidebarMenu/Base.lproj/Main.storyboard
+++ b/SidebarMenu/Base.lproj/Main.storyboard
@@ -26,7 +26,7 @@
                     <connections>
                         <segue destination="c8U-hf-vWv" kind="custom" identifier="sw_rear" customClass="SWRevealViewControllerSegueSetController" id="jNl-dZ-ht5"/>
                         <segue destination="1iL-ll-I54" kind="custom" identifier="sw_right" customClass="SWRevealViewControllerSegueSetController" id="s02-HC-R1e"/>
-                        <segue destination="dXH-rC-dKS" kind="custom" identifier="sw_front" customClass="SWRevealViewControllerSegueSetController" id="0jY-V3-zoc"/>
+                        <segue destination="Iv3-05-gzX" kind="custom" identifier="sw_front" customClass="SWRevealViewControllerSegueSetController" id="LZw-ve-Bvd"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
@@ -182,7 +182,7 @@
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 </mapView>
             </objects>
-            <point key="canvasLocation" x="-149.27536231884059" y="-452.44565217391306"/>
+            <point key="canvasLocation" x="-30" y="-408"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="a23-LC-1XJ">
@@ -199,12 +199,12 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </toolbar>
                     <connections>
-                        <segue destination="3lM-C7-f12" kind="relationship" relationship="rootViewController" id="jHQ-PT-pl1"/>
+                        <segue destination="3lM-C7-f12" kind="relationship" relationship="rootViewController" id="wMc-jy-yrT"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vkz-3n-E2z" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="625" y="-1092"/>
+            <point key="canvasLocation" x="387" y="-1079"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="O4a-aL-NR9">
@@ -685,7 +685,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="shO-si-507" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3046" y="254"/>
+            <point key="canvasLocation" x="1332" y="-1763"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="tLO-9P-kEq">
@@ -698,12 +698,12 @@
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="hkM-JG-q4a" kind="relationship" relationship="rootViewController" id="AKk-eJ-Xbb"/>
+                        <segue destination="hkM-JG-q4a" kind="relationship" relationship="rootViewController" id="5Nx-AR-ocd"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="irV-nJ-iFr" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2323" y="254"/>
+            <point key="canvasLocation" x="404" y="-1763"/>
         </scene>
         <!--Main Controller-->
         <scene sceneID="BPG-Qj-RI4">
@@ -1278,6 +1278,6 @@
         <image name="wishlist" width="1024" height="1024"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="0jY-V3-zoc"/>
+        <segue reference="LZw-ve-Bvd"/>
     </inferredMetricsTieBreakers>
 </document>
