Removed textfields, buttons when driver mode

--- a/SidebarMenu/Base.lproj/Main.storyboard
+++ b/SidebarMenu/Base.lproj/Main.storyboard
@@ -1000,14 +1000,14 @@
                     <connections>
                         <outlet property="callAnUberButton" destination="WTo-zC-G5b" id="JVu-lg-YWy"/>
                         <outlet property="extraButton" destination="SGy-YW-JE6" id="Gjp-1Q-2cy"/>
-                        <outlet property="fromTextField" destination="hZM-oD-XxB" id="imN-g9-3kL"/>
+                        <outlet property="fromTextField" destination="hZM-oD-XxB" id="pUn-BP-xFz"/>
                         <outlet property="heightConstraint" destination="WvT-Ha-xtH" id="Icz-mK-KRl"/>
                         <outlet property="mapView" destination="OZS-Xm-fSG" id="gOY-0E-saD"/>
                         <outlet property="menuButton" destination="xtu-b7-umg" id="Pxa-qS-PE3"/>
                         <outlet property="requestARide" destination="WTo-zC-G5b" id="nbJ-0x-phR"/>
                         <outlet property="tableView" destination="egS-cl-b14" id="902-wF-VMX"/>
-                        <outlet property="toTextField" destination="vs1-2c-cIf" id="cMc-5x-Itn"/>
-                        <outlet property="whenTextField" destination="JdU-Rb-9ap" id="3yG-gg-oIk"/>
+                        <outlet property="toTextField" destination="vs1-2c-cIf" id="DOu-GS-6CC"/>
+                        <outlet property="whenTextField" destination="JdU-Rb-9ap" id="Vqf-NM-7xb"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5oi-pB-tuE" userLabel="First Responder" sceneMemberID="firstResponder"/>
