--- a/SidebarMenu/Base.lproj/Main.storyboard
+++ b/SidebarMenu/Base.lproj/Main.storyboard
@@ -1119,7 +1119,7 @@
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="Kwn-pZ-oD7">
                                 <rect key="frame" x="20" y="80" width="374" height="576"/>
                             </mapView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="You are 5.3 miles away" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YwT-Ag-xWc">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="You are 0.0 miles away" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YwT-Ag-xWc">
                                 <rect key="frame" x="20" y="36" width="374" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="fuR-Zs-hnu"/>
@@ -1127,6 +1127,18 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" alpha="0.55000000000000004" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Total Distance" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Th3-7X-0Gf">
+                                <rect key="frame" x="57" y="576" width="300" height="60"/>
+                                <color key="backgroundColor" red="0.1003899276" green="0.55048123149999995" blue="0.77375525239999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="300" id="6ao-PB-QqB"/>
+                                    <constraint firstAttribute="height" constant="60" id="zxv-cS-42h"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                                <color key="shadowColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -1142,13 +1154,16 @@
                             <constraint firstItem="B5i-iT-kdD" firstAttribute="top" secondItem="dUn-RE-11b" secondAttribute="bottom" constant="20" id="e6h-MW-uGd"/>
                             <constraint firstItem="Kwn-pZ-oD7" firstAttribute="centerY" secondItem="ZhD-CM-wbn" secondAttribute="centerY" id="fQf-26-Vcf"/>
                             <constraint firstAttribute="trailingMargin" secondItem="Kwn-pZ-oD7" secondAttribute="trailing" id="gvg-kY-6na"/>
+                            <constraint firstItem="Th3-7X-0Gf" firstAttribute="centerX" secondItem="ZhD-CM-wbn" secondAttribute="centerX" id="juB-dc-FhJ"/>
                             <constraint firstItem="YwT-Ag-xWc" firstAttribute="top" secondItem="MeW-YR-s2O" secondAttribute="bottom" constant="16" id="s9Z-GS-Der"/>
+                            <constraint firstItem="B5i-iT-kdD" firstAttribute="top" secondItem="Th3-7X-0Gf" secondAttribute="bottom" constant="100" id="vPb-Ea-5xN"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="mapView" destination="Kwn-pZ-oD7" id="Si3-0L-N2t"/>
                         <outlet property="pickUpLabel" destination="YwT-Ag-xWc" id="cIT-e9-GZA"/>
                         <outlet property="pickUpNowButton" destination="dUn-RE-11b" id="LfT-bd-rpB"/>
+                        <outlet property="totalDistanceLabel" destination="Th3-7X-0Gf" id="NlT-ic-JRo"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hHZ-pz-b86" userLabel="First Responder" sceneMemberID="firstResponder"/>
